# benzintracker

./: README.md  pyproject.toml
src/benzintracker/: __init__.py  config.py  main.py  settings.py  translator.py
src/benzintracker/api/: service.py  tankerkonig.py
src/benzintracker/database/: db.py  models.py
src/benzintracker/locales/: de.json  en.json
src/benzintracker/ui/: main_window.py  styles.py
src/benzintracker/ui/tabs/: map_tab.py  settings_tab.py  stats_tab.py  table_tab.py
