[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "benzintracker"
version = "0.1.0"
description = "Track petrol prices in Germany via the Tankerkönig-API, SQLite and PySide6-GUI"
readme = "README.md"
licence = { file = "LICENSE" }
authors = [
    { name = "Frank Hoffmann" , email = "frank.h.dev@protonmail.com"}
]
keywords = ["benzin", "tankstelle", "tankerkoenig", "preise", "gui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities"
]

requires-python = ">=3.11"

dependencies = [
    "PySide6==6.11.0",
    "requests==2.33.1",
    "platformdirs==4.9.4",
    "folium==0.20.0",
    "keyring==25.7.0",
    "matplotlib==3.10.8",
    "numpy==2.4.4"
]

[project.optional-dependencies]
dev = [
    "pytest==7.0",
    "pytest-qt==4.0",
    "hatch"
]

[project.scripts]
benzintracker = "benzintracker.main:main"

[project.urls]
Homepage = "https://github.com/Frank-Hoffmann-Dev/benzintracker"
"Bug Tracker" = "https://github.com/Frank-Hoffmann-Dev/benzintracker/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/benzintracker"]

[tool.hatch.build.targets.wheel.include-pattern]
patterns = ["src/benzintracker/**"]